Don't show index.html urls

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Redirect /about/index.html to /about/
+    if ($request_uri ~ ^(.+)/index\.html$) {
+        return 301 $1/;
+    }
+    
     # Clean URLs - try file, then file.html, then directory
     location / {
         try_files $uri $uri.html $uri/ =404;
