Include nginx.conf

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
               - 'content/**'
               - 'Dockerfile'
               - 'generate.py'
+              - 'nginx.conf'
 
   
   build-and-push:
