--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,12 @@ jobs:
         with:
           context: .
           push: true
+          build-args: |
+            SITE_URL=${{ secrets.SITE_URL }}
+            SITE_NAME=${{ secrets.SITE_NAME }}
+            SITE_TAGLINE=${{ secrets.SITE_TAGLINE }}
+            GTAG_ID=${{ secrets.GTAG_ID }}
+            CONTACT_EMAIL=${{ secrets.CONTACT_EMAIL }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
