--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,18 +71,16 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # deploy:
-  #   needs: build-and-push
-  #   runs-on: ubuntu-latest
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Deploy to VPS via SSH
-  #       uses: appleboy/ssh-action@v1.2.4
-  #       with:
-  #         host: ${{ secrets.VPS_HOST }}
-  #         port: ${{ secrets.VPS_PORT }}
-  #         username: ${{ secrets.VPS_USER }}
-  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         script: |
-  #           cd ~/proxy
-  #           docker compose up --detach --pull always --scale video-store-app=2
+    steps:
+      - name: Deploy to VPS via SSH
+        uses: appleboy/ssh-action@v1.2.4
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          port: ${{ secrets.VPS_PORT }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: ${{ secrets.DEPLOY_SCRIPT }}
