--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Hide nginx version
+    server_tokens off;
+
     # Redirect /about/index.html to /about/
     if ($request_uri ~ ^(.+)/index\.html$) {
         return 301 $1/;
