--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,4 +91,4 @@ jobs:
 
             # Recreate the service
             docker compose -f ${{ secrets.COMPOSE_FILE }} \
-            up --detach ${{ secrets.SERVICE_NAME }}
+            up --detach --remove-orphans ${{ secrets.SERVICE_NAME }}
