Use paths and anchors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,22 @@
 name: Static Website CD
 
 on:
-  push:
+  push: &code_changes
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      - '.github/**'
+      - 'content/**'
+      - 'Dockerfile'
+      - 'generate.py'
+      - 'nginx.conf'
+  pull_request: *code_changes
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
-jobs: 
-  check-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      blog: ${{ steps.filter.outputs.blog }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-      
-      - name: Check for relevant file changes
-        id: filter
-        uses: dorny/paths-filter@v3
-        with:
-          filters: |
-            blog:
-              - '.github/**'
-              - 'content/**'
-              - 'Dockerfile'
-              - 'generate.py'
-              - 'nginx.conf'
-
-  
-  build-and-push:
-    needs: [check-changes]
-    # Deploy only if relevant files changed
-    if: needs.check-changes.outputs.blog == 'true'
+jobs:  
+  build-push:
     runs-on: ubuntu-latest
   
     permissions:
@@ -72,7 +53,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   deploy:
-    needs: build-and-push
+    needs: build-push
     runs-on: ubuntu-latest
 
     steps:
